= CHANGES

== 0.10.7 (Not Yet Released)

== 0.10.6

* FIX #786 reloader issues with routes
* FIX Lumberjack Logging Compatibility
* FIX Write cached css into public stylesheets path (@fnordfish)
* FIX Fixes error with less component (@fnordfish)
* NEW #787 Support Nested Data Attributes in Tags (@agios)
* FIX #760 better html5 helper support (@Cirex)
* NEW #764 adds a few form inputs in helpers (@Cirex)
* FIX #680 upgrade to activesupport and activerecord 3.2
* FIX Adds support for minirecord generators
* FIX Upgrade to latest datamapper
* FIX #702 Change to new sequel migration syntax (@funny-falcon)
* FIX #705 incorrect require when using AR with pg gem (@udzura)
* FIX #724 Use binread for file cache on 1.9.X
* FIX #729 Added setting to change model name for admin
* NEW Adds regexp route generation support (@joshbuddy)
* FIX #720 Set PADRINO_LOG_LEVEL constant by default (@marcosdsanchez)
* FIX #725 app.app_name is not set error in padrino-cache (@modeverv)
* FIX #733 Mailer generator now handles hyphens
* FIX Replace Sinatra quote with Godfather movie reference on server exit (@danishkhan)
* FIX #743 Correctly parse arguments to padrino binary
* FIX #745 Cache now stores response and content_type (@sumskyi)
* FIX #676 Adds support for trinidad web server on jruby
* FIX #736 Logger refactoring to support other loggers (@skade)
* NEW Adds alias 'escape_javascript' for 'js_escape_html' method
* FIX Asset files from absolute paths should not have asset stamps associated
* FIX Updated stylesheets initializers to respect spaces.

== 0.10.5

* FIX #701 make static script assets work again for generator

== 0.10.4

* FIX #690 adds proper require for sinatra-flash in Gemfile
* FIX #691 fixes logger error when rendering templates
* FIX #692 ensure :static_cache_control is properly applied
* FIX #689 status messages to common padrino logger (@udzura)
* FIX logger issue when displaying cache logs
* FIX #694 issue with minitest generator (@runa)